--- a/code/app/src/main/res/values/styles.xml
+++ b/code/app/src/main/res/values/styles.xml
@@ -17,5 +17,16 @@
         <item name="colorControlNormal">@color/white</item>
         <item name="colorControlActivated">@color/yellow</item>
     </style>
+    <style name="FormEditText" parent="Widget.AppCompat.EditText">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@drawable/edit_text_box</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:ems">10</item>
+        <item name="android:inputType">text</item>
+        <item name="android:padding">10dp</item>
+        <item name="android:layout_marginBottom">20dp</item>
+    </style>
+
 </resources>
 
