--- a/code/app/src/main/res/layout/activity_complain_main.xml
+++ b/code/app/src/main/res/layout/activity_complain_main.xml
@@ -54,19 +54,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/guideline" />
 
-    <ImageButton
-        android:id="@+id/btPlus"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_marginEnd="15dp"
-        android:background="@android:color/transparent"
-        android:scaleType="centerInside"
-        android:src="@drawable/add_sign"
-        app:layout_constraintBottom_toTopOf="@+id/btHistory"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.99"/>
-
     <ImageView
         android:id="@+id/ivLogoMain"
         android:layout_width="200dp"
@@ -77,6 +64,15 @@
         app:srcCompat="@drawable/logo_complain" />
 
     <ImageView
+        android:id="@+id/ivProfile"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        app:layout_constraintBottom_toTopOf="@+id/feedWhite"
+        app:layout_constraintEnd_toStartOf="@+id/swLanguage"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:srcCompat="@drawable/baseline_account_circle_24" />
+
+    <ImageView
         android:id="@+id/ivBell"
         android:layout_width="40dp"
         android:layout_height="35dp"
@@ -85,15 +81,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_notifications_black_24dp" />
-
-    <ImageView
-        android:id="@+id/ivProfile"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        app:layout_constraintBottom_toTopOf="@+id/feedWhite"
-        app:layout_constraintEnd_toStartOf="@+id/swLanguage"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars" />
 
     <androidx.appcompat.widget.SwitchCompat
         android:id="@+id/swLanguage"
@@ -109,9 +96,23 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvComplains"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/btHistory"
         app:layout_constraintTop_toBottomOf="@+id/searchView"
         tools:layout_editor_absoluteX="1dp" />
+
+    <ImageButton
+        android:id="@+id/btPlus"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginEnd="15dp"
+        android:background="@android:color/transparent"
+        android:scaleType="centerInside"
+        android:src="@drawable/add_sign"
+        app:layout_constraintBottom_toTopOf="@+id/btHistory"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.99" />
 
     <SearchView
         android:id="@+id/searchView"
