--- a/code/app/src/main/res/layout/activity_report_form.xml
+++ b/code/app/src/main/res/layout/activity_report_form.xml
@@ -10,28 +10,20 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/feedWhite"
-        android:layout_width="409dp"
+        android:layout_width="match_parent"
         android:layout_height="679dp"
         app:cardBackgroundColor="#FAFAFA"
         app:cardCornerRadius="40dp"
+        android:layout_marginTop="60dp"
         app:cardElevation="0dp"
         app:cardForegroundColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
     </androidx.cardview.widget.CardView>
-    <Button
-        android:id="@+id/btFeed"
-        android:layout_width="0dp"
-        android:layout_height="60dp"
-        android:layout_marginBottom="-6dp"
-        android:text="Feed"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/guideline"
-        app:layout_constraintStart_toStartOf="parent"
-        />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
@@ -41,15 +33,6 @@
         app:layout_constraintGuide_percent="0.5" />
 
     <!-- Button 2 - Positioned from the middle of the screen to the far right -->
-    <Button
-        android:id="@+id/btHistory"
-        android:layout_width="0dp"
-        android:layout_height="60dp"
-        android:layout_marginBottom="-6dp"
-        android:text="History"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/guideline" />
 
     <ImageView
         android:id="@+id/ivLogoMain"
@@ -72,12 +55,12 @@
 
     <ImageView
         android:id="@+id/ivProfile"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toTopOf="@+id/feedWhite"
         app:layout_constraintEnd_toStartOf="@+id/swLanguage"
         app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars" />
+        tools:srcCompat="@drawable/baseline_account_circle_24" />
 
     <androidx.appcompat.widget.SwitchCompat
         android:id="@+id/swLanguage"
@@ -132,7 +115,9 @@
             android:ems="15"
             android:gravity="start|top"
             android:inputType="textMultiLine"
-            android:text="Type here..."
+            android:text=""
+            android:hint="Type here..."
+            android:textColorHint="@color/dark_grey"
             android:textColor="@color/dark_grey"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -145,6 +130,7 @@
         android:layout_height="wrap_content"
         android:text="I accept the terms and conditions"
         android:textSize="18sp"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/frameLayout" />
