--- a/code/app/src/main/res/values/colors.xml
+++ b/code/app/src/main/res/values/colors.xml
@@ -14,5 +14,6 @@
     <color name="light_grey">#D3D3D3</color>
     <color name="dark_grey">#AEAEAE</color>
     <color name="yellow">#FFEB3B</color>
+    <color name="blue">#2196F3</color>
 
 </resources>
