--- a/code/app/src/main/res/layout/activity_main_page.xml
+++ b/code/app/src/main/res/layout/activity_main_page.xml
@@ -1,19 +1,231 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#000000"
+    android:foregroundTint="#000000"
     tools:context=".MainPage">
 
-  <Button
-      android:id="@+id/button"
-      android:layout_width="wrap_content"
+
+  <androidx.cardview.widget.CardView
+      android:id="@+id/feedWhite"
+      android:layout_width="409dp"
+      android:layout_height="680dp"
+      android:layout_marginBottom="4dp"
+      app:cardBackgroundColor="#FAFAFA"
+      app:cardCornerRadius="40dp"
+      app:cardElevation="0dp"
+      app:cardForegroundColor="#FFFFFF"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="539dp"
+        app:layout_constraintVertical_bias="10">
+
+      <androidx.constraintlayout.widget.ConstraintLayout
+          android:layout_width="272dp"
+          android:layout_height="70dp"
+          android:background="@drawable/custom_button_main"
+          app:layout_constraintBottom_toBottomOf="parent"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toTopOf="parent"
+          app:layout_constraintVertical_bias="0.248">
+
+        <Button
+            android:id="@+id/button7"
+            android:layout_width="206dp"
+            android:layout_height="78dp"
+            android:layout_marginStart="-1dp"
+            android:layout_marginTop="-1dp"
+            android:text="Bus"
+            android:textAlignment="center"
+            android:textAllCaps="false"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.044"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.466" />
+
+        <ImageButton
+            android:id="@+id/scan_b"
+            android:layout_width="57dp"
+            android:layout_height="57dp"
+            android:layout_marginEnd="4dp"
+            android:background="@color/white"
+            android:scaleType="centerInside"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/scanqr" />
+      </androidx.constraintlayout.widget.ConstraintLayout>
+
+      <androidx.constraintlayout.widget.ConstraintLayout
+          android:layout_width="272dp"
+          android:layout_height="70dp"
+          android:background="@drawable/custom_button_main"
+          app:layout_constraintBottom_toBottomOf="parent"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toTopOf="parent"
+          app:layout_constraintVertical_bias="0.448">
+
+        <Button
+            android:id="@+id/button8"
+            android:layout_width="206dp"
+            android:layout_height="78dp"
+            android:layout_marginStart="-1dp"
+            android:layout_marginTop="-1dp"
+            android:text="Parking"
+            android:textAlignment="center"
+            android:textAllCaps="false"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.044"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.466" />
+
+        <ImageButton
+            android:id="@+id/scan_p"
+            android:layout_width="57dp"
+            android:layout_height="57dp"
+            android:layout_marginEnd="4dp"
+            android:background="@color/white"
+            android:scaleType="centerInside"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/scanqr" />
+      </androidx.constraintlayout.widget.ConstraintLayout>
+
+      <androidx.constraintlayout.widget.ConstraintLayout
+          android:layout_width="272dp"
+          android:layout_height="70dp"
+          android:background="@drawable/custom_button_main"
+          app:layout_constraintBottom_toBottomOf="parent"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toTopOf="parent"
+          app:layout_constraintVertical_bias="0.648">
+
+        <Button
+            android:id="@+id/button9"
+            android:layout_width="206dp"
+            android:layout_height="78dp"
+            android:layout_marginStart="-1dp"
+            android:layout_marginTop="-1dp"
+            android:text="Feed"
+            android:textAlignment="center"
+            android:textAllCaps="false"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.044"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.466" />
+
+        <ImageButton
+            android:id="@+id/camera"
+            android:layout_width="57dp"
+            android:layout_height="57dp"
+            android:layout_marginEnd="4dp"
+            android:background="@color/white"
+            android:scaleType="centerInside"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_camera" />
+      </androidx.constraintlayout.widget.ConstraintLayout>
+
+      <Button
+          android:id="@+id/button10"
+          android:layout_width="272dp"
+          android:layout_height="78dp"
+          android:layout_marginStart="-1dp"
+          android:layout_marginTop="-1dp"
+          android:text="Payments"
+          android:textAlignment="center"
+          android:textAllCaps="false"
+          android:textSize="20sp"
+          android:textStyle="bold"
+          app:layout_constraintBottom_toBottomOf="parent"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintHorizontal_bias="0.507"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toTopOf="parent"
+          app:layout_constraintVertical_bias="0.848" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+  </androidx.cardview.widget.CardView>
+
+  <!-- Button 2 - Positioned from the middle of the screen to the far right -->
+
+
+  <ImageView
+      android:id="@+id/ivLogoMain"
+      android:layout_width="169dp"
+      android:layout_height="85dp"
+      android:layout_marginEnd="16dp"
+      app:layout_constraintBottom_toTopOf="@+id/feedWhite"
+      app:layout_constraintEnd_toStartOf="@+id/ivProfile"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="0.19"
+      app:srcCompat="@drawable/logo_complain" />
+
+  <ImageView
+      android:id="@+id/ivBell"
+      android:layout_width="40dp"
+      android:layout_height="35dp"
+      app:layout_constraintBottom_toTopOf="@+id/feedWhite"
+      app:layout_constraintEnd_toStartOf="@+id/ivLogoMain"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:srcCompat="@drawable/ic_notifications_black_24dp" />
+
+  <ImageView
+      android:id="@+id/ivProfile"
+      android:layout_width="40dp"
+      android:layout_height="40dp"
+      app:layout_constraintBottom_toTopOf="@+id/feedWhite"
+      app:layout_constraintEnd_toStartOf="@+id/swLanguage"
+      app:layout_constraintTop_toTopOf="parent"
+      tools:srcCompat="@tools:sample/avatars" />
+
+  <androidx.appcompat.widget.SwitchCompat
+      android:id="@+id/swLanguage"
+      android:layout_width="0dp"
+      android:layout_height="31dp"
+      android:checked="true"
+      android:text="UK"
+      android:textColor="@color/white"
+      app:layout_constraintBottom_toTopOf="@+id/feedWhite"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintTop_toTopOf="parent" />
+
+  <SearchView
+      android:id="@+id/searchView"
+      android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:text="Button"
-      tools:layout_editor_absoluteX="172dp"
-      tools:layout_editor_absoluteY="415dp" />
+      android:layout_margin="10dp"
+      android:background="@drawable/search_view_bg"
+      android:iconifiedByDefault="false"
+      android:queryHint="Search"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="@+id/feedWhite" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
