--- a/code/app/src/main/res/values/colors.xml
+++ b/code/app/src/main/res/values/colors.xml
@@ -8,8 +8,11 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="login">#5271FF</color>
-    <color name="colorPrimary">#000000</color>
+    <color name="colorPrimary">#5271FF</color>
     <color name="colorPrimaryDark">#5271FF</color>
     <color name="colorAccent">#5271FF</color>
+    <color name="light_grey">#D3D3D3</color>
+    <color name="dark_grey">#AEAEAE</color>
+    <color name="yellow">#FFEB3B</color>
 
 </resources>
