--- a/code/app/src/main/res/layout/item_complain.xml
+++ b/code/app/src/main/res/layout/item_complain.xml
@@ -47,11 +47,11 @@
 
     <ImageButton
         android:id="@+id/ivRate"
-        android:layout_width="30dp"
+        android:layout_width="60dp"
         android:layout_height="30dp"
-        android:background="@android:color/transparent"
-        android:scaleType="centerInside"
         android:layout_marginEnd="10dp"
+        android:background="@android:color/transparent"
+        android:scaleType="fitEnd"
         android:src="@drawable/ic_rating_star"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvDescription" />
@@ -82,10 +82,11 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="6dp"
+        android:layout_marginTop="6dp"
+        android:layout_marginEnd="40dp"
         android:text="Rate"
         android:textColor="@color/blue"
-        app:layout_constraintEnd_toStartOf="@+id/ivRate"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvDescription" />
 
     <TextView
