--- a/code/app/src/main/res/layout/activity_main_page.xml
+++ b/code/app/src/main/res/layout/activity_main_page.xml
@@ -39,7 +39,7 @@
           app:layout_constraintVertical_bias="0.248">
 
         <Button
-            android:id="@+id/button7"
+            android:id="@+id/bus_btn"
             android:layout_width="206dp"
             android:layout_height="78dp"
             android:layout_marginStart="-1dp"
