--- a/code/app/src/main/res/layout/activity_complain_main.xml
+++ b/code/app/src/main/res/layout/activity_complain_main.xml
@@ -110,7 +110,7 @@
         android:layout_marginEnd="15dp"
         android:background="@android:color/transparent"
         android:scaleType="centerInside"
-        android:src="@drawable/add_sign2"
+        android:src="@drawable/add_sign"
         app:layout_constraintBottom_toTopOf="@+id/btHistory"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
