--- a/code/app/src/main/res/layout/activity_main_bus.xml
+++ b/code/app/src/main/res/layout/activity_main_bus.xml
@@ -5,4 +5,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".ui.MainBus">
 
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        tools:layout_editor_absoluteX="171dp"
+        tools:layout_editor_absoluteY="457dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
