--- a/code/app/src/main/res/values/colors.xml
+++ b/code/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="colorAccent">#5271FF</color>
     <color name="light_grey">#D3D3D3</color>
     <color name="dark_grey">#AEAEAE</color>
+    <color name="red">#CA3C3C</color>
     <color name="yellow">#FFEB3B</color>
 
 </resources>
