--- a/code/app/src/main/res/layout/activity_complain_form.xml
+++ b/code/app/src/main/res/layout/activity_complain_form.xml
@@ -4,27 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#000000"
+    android:layout_height="wrap_content"
+    android:background="@drawable/white_frame"
     android:foregroundTint="#000000"
-    tools:context=".ComplainForm">
+    >
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/feedWhite"
-        android:layout_width="409dp"
-        android:layout_height="match_parent"
-        app:cardBackgroundColor="#FAFAFA"
-        app:cardCornerRadius="40dp"
-        android:layout_marginTop="60dp"
-        app:cardElevation="0dp"
-        app:cardForegroundColor="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-    </androidx.cardview.widget.CardView>
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
@@ -34,69 +18,43 @@
         app:layout_constraintGuide_percent="0.5" />
 
     <!-- Button 2 - Positioned from the middle of the screen to the far right -->
-
     <ImageView
-        android:id="@+id/ivLogoMain"
-        android:layout_width="200dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/feedWhite"
-        app:layout_constraintEnd_toStartOf="@+id/ivProfile"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/logo_complain" />
-
-    <ImageView
-        android:id="@+id/ivBell"
-        android:layout_width="40dp"
-        android:layout_height="35dp"
-        app:layout_constraintBottom_toTopOf="@+id/feedWhite"
-        app:layout_constraintEnd_toStartOf="@+id/ivLogoMain"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_notifications_black_24dp" />
-
-    <ImageView
-        android:id="@+id/ivProfile"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        app:layout_constraintBottom_toTopOf="@+id/feedWhite"
-        app:layout_constraintEnd_toStartOf="@+id/swLanguage"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@drawable/baseline_account_circle_24" />
-
-    <androidx.appcompat.widget.SwitchCompat
-        android:id="@+id/swLanguage"
-        android:layout_width="0dp"
-        android:layout_height="31dp"
-        android:checked="true"
-        android:text="UK"
-        android:textColor="@color/white"
-        app:layout_constraintBottom_toTopOf="@+id/feedWhite"
+        android:layout_width="60dp"
+        android:layout_height="8dp"
+        android:layout_marginBottom="449dp"
+        android:src="@drawable/drop_down_bar"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toBottomOf="@+id/tableLayout"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent" />
 
-    <TextView
-        android:id="@+id/tvDirection"
-        style="@style/TextAppearance.AppCompat.Title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="30dp"
-        android:layout_marginTop="10dp"
-        android:text="New Complain"
-        android:textColor="@color/black"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/feedWhite" />
 
     <LinearLayout
+
         android:id="@+id/tableLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="20dp"
+        android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvDirection">
+        app:layout_constraintTop_toTopOf="parent">
+
+
+        <TextView
+            android:id="@+id/tvDirection"
+            style="@style/TextAppearance.AppCompat.Title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="New Complain"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:layout_editor_absoluteY="70dp" />
 
         <!-- Date and Location Section -->
         <LinearLayout
@@ -199,7 +157,7 @@
             android:textSize="20sp" />
 
         <EditText
-            android:id="@+id/etSolutions"
+            android:id="@+id/etSuggestions"
             android:layout_width="match_parent"
             android:layout_height="65dp"
             android:layout_weight="2"
@@ -220,7 +178,6 @@
             android:textColor="@color/dark_grey"
             android:textSize="14sp" />
     </LinearLayout>
-
 
     <TextView
         android:id="@+id/tvPhoto"
@@ -272,7 +229,7 @@
         android:src="@drawable/ic_location" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btRate"
+        android:id="@+id/btSubmit"
         android:layout_width="220dp"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
