--- a/code/app/src/main/res/layout/activity_report_form.xml
+++ b/code/app/src/main/res/layout/activity_report_form.xml
@@ -3,21 +3,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#000000"
+    android:layout_height="wrap_content"
+    android:background="@color/transparent"
     android:foregroundTint="#000000"
-    tools:context=".ComplainForm">
+    >
+
+    <ImageView
+        android:layout_width="60dp"
+        android:layout_height="8dp"
+        android:src="@drawable/drop_down_bar"
+        android:textAlignment="center"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/feedWhite"
-        android:layout_width="409dp"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:cardBackgroundColor="#FAFAFA"
         app:cardCornerRadius="40dp"
-        android:layout_marginTop="60dp"
         app:cardElevation="0dp"
         app:cardForegroundColor="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,45 +40,6 @@
         app:layout_constraintGuide_percent="0.5" />
 
     <!-- Button 2 - Positioned from the middle of the screen to the far right -->
-
-    <ImageView
-        android:id="@+id/ivLogoMain"
-        android:layout_width="200dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/feedWhite"
-        app:layout_constraintEnd_toStartOf="@+id/ivProfile"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/logo_complain" />
-
-    <ImageView
-        android:id="@+id/ivBell"
-        android:layout_width="40dp"
-        android:layout_height="35dp"
-        app:layout_constraintBottom_toTopOf="@+id/feedWhite"
-        app:layout_constraintEnd_toStartOf="@+id/ivLogoMain"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_notifications_black_24dp" />
-
-    <ImageView
-        android:id="@+id/ivProfile"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/feedWhite"
-        app:layout_constraintEnd_toStartOf="@+id/swLanguage"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@drawable/baseline_account_circle_24" />
-
-    <androidx.appcompat.widget.SwitchCompat
-        android:id="@+id/swLanguage"
-        android:layout_width="0dp"
-        android:layout_height="31dp"
-        android:checked="true"
-        android:text="UK"
-        android:textColor="@color/white"
-        app:layout_constraintBottom_toTopOf="@+id/feedWhite"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tvTitle"
@@ -125,7 +93,7 @@
     </FrameLayout>
 
     <CheckBox
-        android:id="@+id/checkBox"
+        android:id="@+id/checkBoxTerms"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="I accept the terms and conditions"
@@ -136,7 +104,7 @@
         app:layout_constraintTop_toBottomOf="@+id/frameLayout" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btRate"
+        android:id="@+id/btSubmitReport"
         android:layout_width="320dp"
         android:layout_height="wrap_content"
         android:layout_margin="30dp"
@@ -147,6 +115,6 @@
         android:textSize="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/checkBox" />
+        app:layout_constraintTop_toBottomOf="@+id/checkBoxTerms" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
