--- a/code/app/src/main/res/values/colors.xml
+++ b/code/app/src/main/res/values/colors.xml
@@ -13,7 +13,7 @@
     <color name="colorAccent">#5271FF</color>
     <color name="light_grey">#D3D3D3</color>
     <color name="dark_grey">#AEAEAE</color>
-    <color name="yellow">#FFEB3B</color>
+    <color name="yellow">#FFCC00</color>
     <color name="blue">#2196F3</color>
-
+    <color name="transparent">#00FFFFFF</color>
 </resources>
