Revert "Merge branch 'feature_complain' into development"
This reverts commit 79cf931dc09b430aeb8dec5d833f846d7650c41e, reversing
changes made to 121a392a4d718a2383af45dffe27328b4fdf2dc8.

--- a/code/app/src/main/res/values/colors.xml
+++ b/code/app/src/main/res/values/colors.xml
@@ -11,9 +11,8 @@
     <color name="colorPrimary">#5271FF</color>
     <color name="colorPrimaryDark">#5271FF</color>
     <color name="colorAccent">#5271FF</color>
-    <color name="light_grey">#D1D1D1</color>
+    <color name="light_grey">#D3D3D3</color>
     <color name="dark_grey">#AEAEAE</color>
-    <color name="yellow">#FFCC00</color>
-    <color name="blue">#2196F3</color>
-    <color name="transparent">#00FFFFFF</color>
+    <color name="yellow">#FFEB3B</color>
+
 </resources>
