--- a/code/app/src/main/res/values-night/themes.xml
+++ b/code/app/src/main/res/values-night/themes.xml
@@ -3,7 +3,7 @@
     <style name="Theme.CityConnect" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/black</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimaryVariant">@color/white</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
@@ -12,19 +12,5 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
-    </style>
-    <style name="buttonBlackBackground">
-        <item name="android:background">@drawable/button_enabled_color</item>
-        <item name="android:textColor">@android:color/white</item>
-    </style>
-
-    <style name="buttonWhiteBackground">
-        <item name="android:background">@drawable/button_disabled_color</item>
-        <item name="android:textColor">@android:color/black</item>
-    </style>
-
-    <style name="DialogAnimation">
-        <item name="android:windowEnterAnimation">@anim/slide_in_bottom</item>
-        <item name="android:windowExitAnimation">@anim/slide_out_bottom</item>
     </style>
 </resources>
